# ModelMaker

./: CMakeLists.txt  README.md  __HEADERS.h  main.cpp
Lexers/: BaseLexer.cpp  BaseLexer.h
Models/: MMClass.cpp  MMClass.h  MMInitializer.cpp  MMInitializer.h  MMParams.cpp  MMParams.h  MMProperties.cpp  MMProperties.h
Parsers/: MMParser.cpp  MMParser.h
Symbols/: MMSymbols.cpp  MMSymbols.h
Utils/: MMUtils.cpp  MMUtils.h
